SDC-16936. Add deprecated warning message on designer
Change-Id: Ida74dd7cb8377abef6a233e935ee8b8ca72efd8b
Reviewed-on: https://review.streamsets.net/c/datacollector/+/40886
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Alex Sanchez Cabana <alex.sanchez@streamsets.com>

--- a/datacollector-ui/src/main/webapp/i18n/en.json
+++ b/datacollector-ui/src/main/webapp/i18n/en.json
@@ -391,6 +391,7 @@
     "graphPane": {
       "errorStackTrace": "Error Details",
       "dontShowAgain": "Don't show again.",
+      "deprecated": "The Data Collector user interface has been deprecated and will be removed in Data Collector 5.0. We highly recommend using Control Hub to design and run your pipelines.",
       "originMissing": "Origin missing",
       "selectExecutor": "Select Executor to connect...",
       "selectProcessor": "Select Processor to connect...",
