SDC-16986. Change deprecated icon and message
Change-Id: I135d5ef71b1301dbd83af505a50153d71c5323a6
Reviewed-on: https://review.streamsets.net/c/datacollector/+/41153
Reviewed-by: Martin Balzamo <martin@streamsets.com>
Reviewed-by: Dimas Cabré i Chacón <dimas.cabre.chacon@streamsets.com>

--- a/datacollector-ui/src/main/webapp/i18n/en.json
+++ b/datacollector-ui/src/main/webapp/i18n/en.json
@@ -56,7 +56,7 @@
       "autoArrange": "Auto Arrange",
       "batchNumber": "Batch Number",
       "betaStageTooltip": "This is a technology preview stage, do not use in production",
-      "deprecatedStageTooltip": "This stage is deprecated and will be removed in Data Collector 5.0.",
+      "deprecatedStageTooltip": "This stage is deprecated and may be removed in a future release.",
       "cancel": "Cancel",
       "changeRule": "Change Rule",
       "captured": "Captured",
